force-app/main/default/objects/Master_Logistics_CPReview__c/Master_Logistics_CPReview__c.object-meta.xml
<CustomObject>
    <label>Master Logistics CPReview</label>
    <nameField>
        <label>Master Logistics CPReview Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Master Logistics CPReviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>