force-app/main/default/objects/Master_Logistics_CPReview__c/fields/Class_code__c.field-meta.xml
<CustomField>
    <fullName>Class_code__c</fullName>
    <label>Class code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>