force-app/main/default/objects/Master_Logistics_CPReview__c/fields/Class_Division_Code__c.field-meta.xml
<CustomField>
    <fullName>Class_Division_Code__c</fullName>
    <label>Class/Division Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>