force-app/main/default/objects/Master_Logistics_CPReview__c/fields/Class_Division_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Class_Division_Name_English__c</fullName>
    <label>Class/Division Name English</label>
    <length>170</length>
    <type>Text</type>
</CustomField>