force-app/main/default/objects/Master_Logistics_CPReview__c/fields/Class_Division_Name_Korean__c.field-meta.xml
<CustomField>
    <fullName>Class_Division_Name_Korean__c</fullName>
    <label>Class/Division Name Korean</label>
    <length>80</length>
    <type>Text</type>
</CustomField>