force-app/main/default/objects/Master_Logistics_CPReview__c/fields/Class_Name_English__c.field-meta.xml
<CustomField>
    <fullName>Class_Name_English__c</fullName>
    <label>Class Name English</label>
    <length>80</length>
    <type>Text</type>
</CustomField>